[package]
name = "lambda-web"
version = "0.1.0"
authors = ["Hanabusa Masahiro <masa@hanabusa.net>"]
description = "Run Rust web frameworks on AWS Lambda"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hanabu/lambda-web"
license = "MIT"
keywords = ["lambda", "web"]
categories = ["web-programming::http-server"]
exclude = ["/docker/"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["br"]

# Enable one of your favorite web-framework
actix4 = ["actix-web", "actix-http", "actix-service"]
#rocket05 = ["rocket"]
#warp03 = ["warp"]

# Compress output with Brotli
br = ["brotli"]

[dependencies]
#lambda_runtime = "0.3.1"
lamedh_runtime = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
base64 = "0.13"

actix-web = { version = "4.0.0-beta.6", default-features = false, features = ["cookies"], optional = true }
actix-http = { version = "3.0.0-beta.6", default-features = false, optional = true }
actix-service = { version = "2", optional = true }
rocket = { version = "0.5.0-rc.1", default-features = false, optional = true }
warp = { version = "0.3.1", default-features = false, optional = true }

brotli = { version = "3", features = ["std"], optional = true }

